Updated error handling block

--- a/py/REU_student_folders.ipynb
+++ b/py/REU_student_folders.ipynb
@@ -121,11 +121,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Open an error log\n",
     "dt_now = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "\n",
     "f_error = f'../errors-{dt_now}.txt'\n",
-    "f_err = open(f_error, \"a\")\n",
-    "\n",
+    "f_err = open(f_error, \"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i in df_app.index.tolist():\n",
     "    try:\n",
     "        # Format student name\n",
@@ -171,9 +178,7 @@
     "        error = sys.exc_info()\n",
     "        print(error)\n",
     "        f_err.write(f'{error} \\n \\n')\n",
-    "        pass\n",
-    "        \n",
-    "f_err.close()"
+    "        pass"
    ]
   },
   {
@@ -205,9 +210,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_error = f'../errors-{dt_now}.txt'\n",
-    "f_err = open(f_error, \"a\")\n",
-    "\n",
     "for i in df_app.index.tolist():\n",
     "    try:\n",
     "        # Format student name\n",
@@ -227,9 +229,7 @@
     "        error = sys.exc_info()\n",
     "        print(error)\n",
     "        f_err.write(f'{error} \\n \\n')\n",
-    "        pass\n",
-    "        \n",
-    "f_err.close()"
+    "        pass"
    ]
   },
   {
@@ -245,9 +245,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_error = f'../errors-{dt_now}.txt'\n",
-    "f_err = open(f_error, \"a\")\n",
-    "\n",
     "for i in df_app.index.tolist():\n",
     "    try:\n",
     "        # Format student name\n",
@@ -272,9 +269,7 @@
     "        error = sys.exc_info()\n",
     "        print(error)\n",
     "        f_err.write(f'{error} \\n \\n')\n",
-    "        pass\n",
-    "        \n",
-    "f_err.close()"
+    "        pass"
    ]
   },
   {
@@ -301,30 +296,38 @@
    "outputs": [],
    "source": [
     "for i in df_app.index.tolist():\n",
-    "    # Format student name\n",
-    "    name = f\"{df_app['Q1'][i]} {df_app['Q2'][i]}\"\n",
-    "    print(f'Starting {name}')\n",
+    "    try:\n",
+    "        # Format student name\n",
+    "        name = f\"{df_app['Q1'][i]} {df_app['Q2'][i]}\"\n",
+    "        print(f'Starting {name}')\n",
     "\n",
-    "    # Define student directory\n",
-    "    student_dir = f'../student_folders/{df_app.Q2[i]}_{df_app.Q1[i]}'\n",
+    "        # Define student directory\n",
+    "        student_dir = f'../student_folders/{df_app.Q2[i]}_{df_app.Q1[i]}'\n",
     "\n",
-    "    # Make Rec Sheets from template\n",
-    "    df_name = df_letter[df_letter['Q13'] == name]\n",
+    "        # Make Rec Sheets from template\n",
+    "        df_name = df_letter[df_letter['Q13'] == name]\n",
     "\n",
-    "    n = 1\n",
-    "    for ind in df_name.index.tolist():\n",
-    "        # MailMerge to create pretty rec sheets\n",
-    "        with MailMerge('../rec_template.docx') as document:\n",
-    "            f_docx = f\"../docx/rec/{df_app['Q2'][i]}_{df_app['Q1'][i]}_rec_{n}.docx\"\n",
-    "            f_pdf = f\"../docx/rec/{df_app['Q2'][i]}_{df_app['Q1'][i]}_rec_{n}.pdf\"\n",
-    "            document.merge(Q1=str(df_letter['Q1'][ind]), Q2=str(df_letter['Q2'][ind]), \n",
-    "                           Q3=str(df_letter['Q3'][ind]), Q12=str(df_letter['Q12'][ind]), \n",
-    "                           Q13=str(df_letter['Q13'][ind]), Q14=str(df_letter['Q14'][ind]))\n",
+    "        n = 1\n",
+    "        for ind in df_name.index.tolist():\n",
+    "            # MailMerge to create pretty rec sheets\n",
+    "            with MailMerge('../rec_template.docx') as document:\n",
+    "                f_docx = f\"../docx/rec/{df_app['Q2'][i]}_{df_app['Q1'][i]}_rec_{n}.docx\"\n",
+    "                f_pdf = f\"../docx/rec/{df_app['Q2'][i]}_{df_app['Q1'][i]}_rec_{n}.pdf\"\n",
+    "                document.merge(Q1=str(df_letter['Q1'][ind]), Q2=str(df_letter['Q2'][ind]), \n",
+    "                               Q3=str(df_letter['Q3'][ind]), Q12=str(df_letter['Q12'][ind]), \n",
+    "                               Q13=str(df_letter['Q13'][ind]), Q14=str(df_letter['Q14'][ind]))\n",
     "\n",
-    "            # Write pretty application\n",
-    "            document.write(f_docx)\n",
+    "                # Write pretty application\n",
+    "                document.write(f_docx)\n",
     "\n",
-    "            n += 1"
+    "                n += 1\n",
+    "    except:\n",
+    "        print(f'Problem with {name}')\n",
+    "        f_err.write(f'Problem with {name}')\n",
+    "        error = sys.exc_info()\n",
+    "        print(error)\n",
+    "        f_err.write(f'{error} \\n \\n')\n",
+    "        pass"
    ]
   },
   {
@@ -357,10 +360,6 @@
    "outputs": [],
    "source": [
     "# Copy rec sheets to student directories\n",
-    "\n",
-    "f_error = f'../errors-{dt_now}.txt'\n",
-    "f_err = open(f_error, \"a\")\n",
-    "\n",
     "for i in df_app.index.tolist():\n",
     "    try:\n",
     "        # Format student name\n",
@@ -382,9 +381,7 @@
     "        error = sys.exc_info()\n",
     "        print(error)\n",
     "        f_err.write(f'{error} \\n \\n')\n",
-    "        pass\n",
-    "        \n",
-    "f_err.close()"
+    "        pass"
    ]
   },
   {
@@ -400,9 +397,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_error = f'../errors-{dt_now}.txt'\n",
-    "f_err = open(f_error, \"a\")\n",
-    "\n",
     "for i in df_app.index.tolist():\n",
     "    try:\n",
     "        # Format student name\n",
@@ -429,9 +423,7 @@
     "        error = sys.exc_info()\n",
     "        print(error)\n",
     "        f_err.write(f'{error} \\n \\n')\n",
-    "        pass\n",
-    "        \n",
-    "f_err.close()"
+    "        pass"
    ]
   },
   {
@@ -447,9 +439,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_error = f'../errors-{dt_now}.txt'\n",
-    "f_err = open(f_error, \"a\")\n",
-    "\n",
     "for i in df_app.index.tolist():\n",
     "    try:\n",
     "        # Format student name\n",
@@ -485,9 +474,7 @@
     "        error = sys.exc_info()\n",
     "        print(error)\n",
     "        f_err.write(f'{error} \\n \\n')\n",
-    "        pass\n",
-    "        \n",
-    "f_err.close()"
+    "        pass"
    ]
   },
   {
@@ -495,7 +482,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Close error file\n",
+    "f_err.close()"
+   ]
   }
  ],
  "metadata": {
