--- a/py/reviewer_folders.ipynb
+++ b/py/reviewer_folders.ipynb
@@ -45,7 +45,7 @@
     "# Read reviewer list to dataframe\n",
     "df_rev = pd.read_csv(rev_csv) \n",
     "\n",
-    "# Drop na columns\n",
+    "# Drop nan rows\n",
     "df_rev.dropna(inplace=True)"
    ]
   },
